@@ -1,5 +1,7 @@
+package org.hisp.dhis.common;
+
 /*
- * Copyright (c) 2004-2022, University of Oslo
+ * Copyright (c) 2004-2018, University of Oslo
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -25,232 +27,188 @@
  * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
  * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
-package org.hisp.dhis.common;
-
-import static java.util.stream.Collectors.toSet;
 
 import com.fasterxml.jackson.dataformat.xml.annotation.JacksonXmlRootElement;
-import java.time.LocalDate;
-import java.time.LocalDateTime;
-import java.util.Arrays;
-import java.util.Date;
-import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
-import org.hisp.dhis.analytics.AggregationType;
+import com.google.common.collect.ImmutableSet;
 import org.hisp.dhis.organisationunit.OrganisationUnit;
 import org.hisp.dhis.trackedentity.TrackedEntityInstance;
 import org.opengis.geometry.primitive.Point;
 
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.util.Date;
+import java.util.Set;
+
 /**
  * @author Lars Helge Overland
  */
-@JacksonXmlRootElement(localName = "valueType", namespace = DxfNamespaces.DXF_2_0)
-public enum ValueType {
-  TEXT(String.class, true),
-  LONG_TEXT(String.class, true),
-  MULTI_TEXT(String.class, true),
-  LETTER(String.class, true),
-  PHONE_NUMBER(String.class, true),
-  EMAIL(String.class, true),
-  BOOLEAN(Boolean.class, true),
-  TRUE_ONLY(Boolean.class, true),
-  DATE(LocalDate.class, false),
-  DATETIME(LocalDateTime.class, false),
-  TIME(String.class, false),
-  NUMBER(Double.class, true),
-  UNIT_INTERVAL(Double.class, true),
-  PERCENTAGE(Double.class, true),
-  INTEGER(Integer.class, true),
-  INTEGER_POSITIVE(Integer.class, true),
-  INTEGER_NEGATIVE(Integer.class, true),
-  INTEGER_ZERO_OR_POSITIVE(Integer.class, true),
-  TRACKER_ASSOCIATE(TrackedEntityInstance.class, false),
-  USERNAME(String.class, true),
-  COORDINATE(Point.class, true),
-  ORGANISATION_UNIT(OrganisationUnit.class, false),
-  REFERENCE(Reference.class, false),
-  AGE(Date.class, false),
-  URL(String.class, true),
-  FILE_RESOURCE(String.class, true, FileTypeValueOptions.class),
-  IMAGE(String.class, false, FileTypeValueOptions.class),
-  GEOJSON(String.class, false);
+@JacksonXmlRootElement( localName = "valueType", namespace = DxfNamespaces.DXF_2_0 )
+public enum ValueType
+{
+    TEXT( String.class, true ),
+    LONG_TEXT( String.class, true ),
+    LETTER( String.class, true ),
+    PHONE_NUMBER( String.class, false ),
+    EMAIL( String.class, false ),
+    BOOLEAN( Boolean.class, true ),
+    TRUE_ONLY( Boolean.class, true ),
+    DATE( LocalDate.class, false ),
+    DATETIME( LocalDateTime.class, false ),
+    TIME( String.class, false ),
+    NUMBER( Double.class, true ),
+    UNIT_INTERVAL( Double.class, true ),
+    PERCENTAGE( Double.class, true ),
+    INTEGER( Integer.class, true ),
+    INTEGER_POSITIVE( Integer.class, true ),
+    INTEGER_NEGATIVE( Integer.class, true ),
+    INTEGER_ZERO_OR_POSITIVE( Integer.class, true ),
+    TRACKER_ASSOCIATE( TrackedEntityInstance.class, false ),
+    USERNAME( String.class, false ),
+    COORDINATE( Point.class, true ),
+    ORGANISATION_UNIT( OrganisationUnit.class, false ),
+    AGE( Date.class, false ),
+    URL( String.class, false ),
+    FILE_RESOURCE( String.class, false ),
+    IMAGE( String.class, false);
 
-  /** The character used to separate values in a multi-text value. */
-  public static final String MULTI_TEXT_SEPARATOR = ",";
+    public static final Set<ValueType> INTEGER_TYPES = ImmutableSet.<ValueType>builder().add(
+        INTEGER, INTEGER_POSITIVE, INTEGER_NEGATIVE, INTEGER_ZERO_OR_POSITIVE ).build();
+    
+    public static final Set<ValueType> DECIMAL_TYPES = ImmutableSet.<ValueType>builder().add(
+        NUMBER, UNIT_INTERVAL, PERCENTAGE ).build();
 
-  public static List<String> splitMultiText(String value) {
-    return value == null ? List.of() : List.of(value.split(MULTI_TEXT_SEPARATOR));
-  }
+    public static final Set<ValueType> BOOLEAN_TYPES = ImmutableSet.of(
+        BOOLEAN, TRUE_ONLY );
 
-  private static final Set<ValueType> INTEGER_TYPES =
-      Set.of(INTEGER, INTEGER_POSITIVE, INTEGER_NEGATIVE, INTEGER_ZERO_OR_POSITIVE);
+    public static final Set<ValueType> TEXT_TYPES = ImmutableSet.of(
+        TEXT, LONG_TEXT, LETTER, TIME, USERNAME, EMAIL, PHONE_NUMBER, URL );
 
-  private static final Set<ValueType> DECIMAL_TYPES = Set.of(NUMBER, UNIT_INTERVAL, PERCENTAGE);
+    public static final Set<ValueType> DATE_TYPES = ImmutableSet.of(
+        DATE, DATETIME, AGE );
 
-  private static final Set<ValueType> BOOLEAN_TYPES = Set.of(BOOLEAN, TRUE_ONLY);
+    public static final Set<ValueType> FILE_TYPES = ImmutableSet.<ValueType>builder().add(
+        FILE_RESOURCE, IMAGE ).build();
 
-  public static final Set<ValueType> TEXT_TYPES =
-      Set.of(TEXT, LONG_TEXT, LETTER, TIME, USERNAME, EMAIL, PHONE_NUMBER, URL);
+    public static final Set<ValueType> GEO_TYPES = ImmutableSet.<ValueType>builder().add(
+        COORDINATE ).build();
 
-  public static final Set<ValueType> DATE_TYPES = Set.of(DATE, DATETIME, AGE);
+    public static final Set<ValueType> NUMERIC_TYPES = ImmutableSet.<ValueType>builder().addAll(
+        INTEGER_TYPES ).addAll( DECIMAL_TYPES ).build();
 
-  private static final Set<ValueType> FILE_TYPES = Set.of(FILE_RESOURCE, IMAGE);
+    @Deprecated
+    private final Class<?> javaClass;
 
-  private static final Set<ValueType> GEO_TYPES = Set.of(COORDINATE, GEOJSON);
+    private boolean aggregateable;
 
-  private static final Set<ValueType> JSON_TYPES = Set.of(GEOJSON);
-
-  public static final Set<ValueType> NUMERIC_TYPES =
-      Stream.concat(INTEGER_TYPES.stream(), DECIMAL_TYPES.stream())
-          .collect(Collectors.toUnmodifiableSet());
-
-  @Deprecated private final Class<?> javaClass;
-
-  private boolean aggregatable;
-
-  private Class<? extends ValueTypeOptions> valueTypeOptionsClass;
-
-  ValueType() {
-    this.javaClass = null;
-  }
-
-  ValueType(Class<?> javaClass, boolean aggregateable) {
-    this.javaClass = javaClass;
-    this.aggregatable = aggregateable;
-    this.valueTypeOptionsClass = null;
-  }
-
-  ValueType(
-      Class<?> javaClass,
-      boolean aggregatable,
-      Class<? extends ValueTypeOptions> valueTypeOptionsClass) {
-    this(javaClass, aggregatable);
-    this.valueTypeOptionsClass = valueTypeOptionsClass;
-  }
-
-  public Class<?> getJavaClass() {
-    return javaClass;
-  }
-
-  public boolean isInteger() {
-    return INTEGER_TYPES.contains(this);
-  }
-
-  public boolean isDecimal() {
-    return DECIMAL_TYPES.contains(this);
-  }
-
-  public boolean isBoolean() {
-    return BOOLEAN_TYPES.contains(this);
-  }
-
-  public boolean isText() {
-    return TEXT_TYPES.contains(this);
-  }
-
-  public boolean isDate() {
-    return DATE_TYPES.contains(this);
-  }
-
-  public boolean isFile() {
-    return FILE_TYPES.contains(this);
-  }
-
-  public boolean isGeo() {
-    return GEO_TYPES.contains(this);
-  }
-
-  public boolean isOrganisationUnit() {
-    return ORGANISATION_UNIT == this;
-  }
-
-  public boolean isReference() {
-    return REFERENCE == this;
-  }
-
-  /** Includes integer and decimal types. */
-  public boolean isNumeric() {
-    return NUMERIC_TYPES.contains(this);
-  }
-
-  public boolean isJson() {
-    return JSON_TYPES.contains(this);
-  }
-
-  public boolean isAggregatable() {
-    return aggregatable;
-  }
-
-  public boolean isAggregatable(AggregationType aggregationType) {
-    if (!aggregationType.isAggregatable() || !isAggregatable()) {
-      return false;
+    ValueType()
+    {
+        this.javaClass = null;
     }
 
-    if (this == FILE_RESOURCE && aggregationType != AggregationType.COUNT) {
-      return false;
+    ValueType( Class<?> javaClass, boolean aggregateable )
+    {
+        this.javaClass = javaClass;
+        this.aggregateable = aggregateable;
     }
 
-    if (TEXT_TYPES.contains(this)) {
-      return true;
+    public Class<?> getJavaClass()
+    {
+        return javaClass;
     }
 
-    return aggregationType != AggregationType.NONE;
-  }
+    public boolean isInteger()
+    {
+        return INTEGER_TYPES.contains( this );
+    }
+    
+    public boolean isDecimal()
+    {
+        return DECIMAL_TYPES.contains( this );
+    }
 
-  public Class<? extends ValueTypeOptions> getValueTypeOptionsClass() {
-    return this.valueTypeOptionsClass;
-  }
+    public boolean isBoolean()
+    {
+        return BOOLEAN_TYPES.contains( this );
+    }
 
-  /**
-   * Returns a simplified value type. As an example, if the value type is any numeric type such as
-   * integer, percentage, then {@link ValueType#NUMBER} is returned. Can return any of:
-   *
-   * <ul>
-   *   <li>{@link ValueType#NUMBER} for any numeric types.
-   *   <li>{@link ValueType#BOOLEAN} for any boolean types.
-   *   <li>{@link ValueType#DATE} for any date / time types.
-   *   <li>{@link ValueType#FILE_RESOURCE} for any file types.
-   *   <li>{@link ValueType#COORDINATE} for any geometry types.
-   *   <li>{@link ValueType#TEXT} for any textual types.
-   *   <li>{@link ValueType#MULTI_TEXT} if it is that type.
-   * </ul>
-   *
-   * @return a simplified value type.
-   */
-  public ValueType toSimplifiedValueType() {
-    if (isNumeric()) {
-      return ValueType.NUMBER;
+    public boolean isText()
+    {
+        return TEXT_TYPES.contains( this );
     }
-    if (isBoolean()) {
-      return ValueType.BOOLEAN;
-    }
-    if (isDate()) {
-      return ValueType.DATE;
-    }
-    if (isFile()) {
-      return ValueType.FILE_RESOURCE;
-    }
-    if (isGeo()) {
-      return ValueType.COORDINATE;
-    }
-    if (this == MULTI_TEXT) {
-      return this;
-    }
-    return ValueType.TEXT;
-  }
 
-  public static ValueType fromString(String valueType) throws IllegalArgumentException {
-    return Arrays.stream(ValueType.values())
-        .filter(v -> v.toString().equals(valueType))
-        .findFirst()
-        .orElseThrow(() -> new IllegalArgumentException("unknown value: " + valueType));
-  }
+    public boolean isDate()
+    {
+        return DATE_TYPES.contains( this );
+    }
 
-  public static Set<ValueType> getAggregatables() {
-    return Arrays.stream(ValueType.values())
-        .filter(v -> Arrays.stream(AggregationType.values()).anyMatch(v::isAggregatable))
-        .collect(toSet());
-  }
+    public boolean isFile()
+    {
+        return FILE_TYPES.contains( this );
+    }
+    
+    public boolean isGeo()
+    {
+        return GEO_TYPES.contains( this );
+    }
+
+    public boolean isOrganisationUnit()
+    {
+        return ORGANISATION_UNIT == this;
+    }
+    /**
+     * Includes integer and decimal types.
+     */
+    public boolean isNumeric()
+    {
+        return NUMERIC_TYPES.contains( this );
+    }
+
+    public boolean isAggregateable()
+    {
+        return aggregateable;
+    }
+
+    /**
+     * Returns a simplified value type. As an example, if the value type is
+     * any numeric type such as integer, percentage, then {@link ValueType#NUMBER}
+     * is returned. Can return any of:
+     *
+     * <ul>
+     * <li>{@link ValueType#NUMBER} for any numeric types.</li>
+     * <li>{@link ValueType#BOOLEAN} for any boolean types.</li>
+     * <li>{@link ValueType#DATE} for any date / time types.</li>
+     * <li>{@link ValueType#FILE_RESOURCE} for any file types.</li>
+     * <li>{@link ValueType#COORDINATE} for any geometry types.</li>
+     * <li>{@link ValueType#TEXT} for any textual types.</li>
+     * </ul>
+     *
+     * @return a simplified value type.
+     */
+    public ValueType asSimplifiedValueType()
+    {
+        if ( isNumeric() )
+        {
+            return ValueType.NUMBER;
+        }
+        else if ( isBoolean() )
+        {
+            return ValueType.BOOLEAN;
+        }
+        else if ( isDate() )
+        {
+            return ValueType.DATE;
+        }
+        else if ( isFile() )
+        {
+            return ValueType.FILE_RESOURCE;
+        }
+        else if ( isGeo() )
+        {
+            return ValueType.COORDINATE;
+        }
+        else
+        {
+            return ValueType.TEXT;
+        }
+    }
 }
